app/app.css
body {
  padding-top: 70px;
}

.navbar-right .btn-group {
  margin-right: 10px;
}

/* current-field.styl */
.current-field > * {
  margin-left: auto;
  margin-right: auto;
  transform-origin: 50% 0%;
}

.field-container {
  user-select: none;
}

/* field-style-default.styl */
.field-style--default .current-field {
  margin-bottom: 20px;
}

.field-style--default .current-field canvas {
  position: absolute;
  top: 0;
}

.field-style--default .current-field table.field {
  background-color: #ddd;
  border-radius: 4px;
  border-spacing: 0;
}

.field-style--default .current-field table.field td {
  text-align: center;
  border-right: 2px solid #fff;
  border-bottom: 2px solid #fff;
  padding: 0;
}

.field-style--default .current-field table.field td:last-child {
  border-right: none;
}

.field-style--default .current-field table.field tr:last-child td {
  border-bottom: none;
}

.field-style--default.size-4 .current-field table.field td {
  width: 70px;
  height: 70px;
  font-size: 35px;
}

.field-style--default.size-5 .current-field table.field td {
  width: 56px;
  height: 56px;
  font-size: 30px;
}

.field-style--default.size-4 .field-container {
  width: 284px; /* (70 + 1) * 4 */
  position: relative;
}

.field-style--default.size-5 .field-container {
  width: 285px; /* (56 + 1) * 5 */
  position: relative;
}

.field-style--default.size-4 .input-area {
  width: 284px;
}

.field-style--default.size-5 .input-area {
  width: 285px;
}

.field-style--default .current-field .input-area {
  margin-top: 30px;
  position: relative;
}

.field-style--default .current-field .input-area input {
  top: 0;
  width: 100%;
  display: block;
  height: 30px;
  padding-left: 5px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 18px;
  line-height: 30px;
  letter-spacing: 1px;
}

.field-style--default .current-field .input-area label {
  position: absolute;
  top: 0;
  right: 0;
  color: #999;
  margin: 0;
  text-align: right;
  font-size: 19px;
  line-height: 30px;
  margin-right: 5px;
}

.field-style--default .current-field .giant-tick,
.field-style--default .current-field .giant-cross {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  text-align: center;
  font-size: 231px;
  opacity: 0;
  pointer-events: none;
}

.field-style--default .current-field .giant-tick.highlight,
.field-style--default .current-field .giant-cross.highlight {
  animation: field-style-default-highlight 0.5s;
}

@keyframes field-style-default-highlight {
  0%   { opacity: 0; font-size: 200px; }
  50%  { opacity: 0.7; }
  100% { opacity: 0; font-size: 330px; }
}

/* chat.styl */
.wortopia .chat {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 130px); /* viewport minus navbar + field */
}

.wortopia .chat .panel-body {
  flex: 1;
  overflow-y: auto;
}

.wortopia .chat .panel-footer {
  position: relative;
  flex-shrink: 0;
}

.wortopia .chat .panel-footer label {
  z-index: 4;
  position: absolute;
  top: 0;
  right: 3px;
  color: #999;
  margin: 0;
  text-align: right;
  font-size: 19px;
  line-height: 30px;
  margin-right: 5px;
}

/* guesses.styl */
.guesses .word {
  padding-left: 16px;
  text-transform: uppercase;
}

.guesses .points,
.guesses .status {
  text-align: right;
  padding-right: 15px;
}

/* last-round.styl */
.last-round .panel-heading p {
  margin-bottom: 5px;
}

.last-round .panel-heading table.field {
  float: right;
  margin-top: -10px;
  margin-right: -14px;
}

.last-round .panel-heading table.field td {
  width: 20px;
  height: 20px;
  text-align: center;
  padding: 0;
  background-color: #fff;
  border-left: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
}

.size-4 .last-round .panel-heading,
.size-5 .last-round .panel-heading {
  height: 84px; /* (20px + 1px) * 4 */
}

.last-round .panel-body {
  word-spacing: 4px;
  text-align: justify;
}

.last-round .panel-body .word {
  text-transform: uppercase;
  padding: 1px;
}

.last-round .panel-body .word--not-guessed {
  color: #888;
}

.last-round .panel-body .word--highlight {
  background-color: #428bca;
  color: #fff;
}

